--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,14 +5,103 @@
   |============================
 */
 /* Common styles */
-@import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
 
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+@import url('./reset.css');
+
+body {
+  font-family: Arial, sans-serif;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 20px;
+  
+}
+
+.timer {
+  margin-top: 20px;
+  display: flex;
+  gap: 15px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.label {
+  font-size: 18px;
+}
+
+button {
+  padding: 8px 20px;
+  font-size: 18px;
+  margin-top: 20px;
+}
+
+input {
+  padding: 10px ;
+  font-size: 16px;
+}
+
+/* ----------------------------------------- */
+
+    .form {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      max-width: 400px;
+      width: 100%;
+    }
+  
+    .form-label {
+      display: block;
+      margin-bottom: 15px;
+      font-size: 16px;
+    }
+  
+    .form-input {
+      width: 375px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-size: 16px;
+    }
+  
+    .form-fieldset {
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  display: flex;
+  gap: 30px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+    }
+  
+    .form-legend {
+      font-size: 16px;
+      margin-bottom: 10px;
+    }
+  
+    .form-radio-label {
+      display: inline-block;
+      margin-bottom: 20px;
+    }
+  
+    .form-radio {
+      margin-right: 10px;
+    }
+  
+    .form-button {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      cursor: pointer;
+    }
